--- a/main.html
+++ b/main.html
@@ -8,6 +8,9 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<div>
+		<span>My current favourite song is </span><a href="https://www.youtube.com/watch?v=5JTLSHf1rwY" target="_blank">vastha ni venuka</a>
+	</div>
     <script type="text/javascript" src="./script.js">
 </script>
 
